Fix in Dark Mode

--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -159,10 +159,17 @@ body {
 }
 
 
-body.dark {background-color: #424242 !important;}
-.App-header.dark {background-color: #70767b !important;}
-body.dark p {color: rgb(127, 225, 255);}
-a.dark {color: rgb(127, 225, 255);}
+body.dark {background-color: #1b1b1b !important;}
+body.dark label {color: #bee7ff}
+body.dark input {color: #bee7ff}
+body.dark .news-headline {color: #bee7ff} 
+body.dark .news-list {color: chartreuse;}
+body.dark .news-article {color: #bee7ff; background-color: #41505c;}
+body.dark .news-card {color: #bee7ff; background-color: #41505c; border-color: black;}
+body.dark .search-main-div > div > input{color: #bee7ff !important;}
+.App-header.dark {background-color: #41505c !important;}
+body.dark p {color: #bee7ff}
+a.dark {color: #bee7ff}
 .footer-logo.dark{background-color: currentColor;}
 .Footer.dark {background-color: #242424 !important;}
 /* Dark mode for The Content on all pages */
@@ -172,7 +179,7 @@ body.dark .text-section h2{color: #bee7ff}
 body.dark .header{background-color: #0e2533;}
 body.dark .Footer{background-color:#0e2533}
 body.dark .quote{background-color: #242424; color: #bee7ff;}
-body.dark h1, p {color: #bee7ff} body.border{color:  rgb(45, 79, 90)} a{color: #bee7ff} input {color: #ccc !important} select {color: rgb(75, 123, 107)  !important;} textarea {color:rgb(127, 225, 255) !important;}
+body.dark h1, p {color: #bee7ff} body.border{color:  rgb(45, 79, 90)} a{color: #bee7ff} input {color: #ccc !important} select {color: rgb(75, 123, 107)  !important;} textarea {color:#bee7ff !important;}
 /* Dark mode for Partners page */
 body.dark #chalmers{ background-color: #aff9d3; border-radius: 25px;}
 body.dark #lund{ background-color: #aff9d3; border-radius: 25px;}
