--- a/frontend/src/pages/Settings.css
+++ b/frontend/src/pages/Settings.css
@@ -76,7 +76,7 @@ h3{
 
 .news-image {
   width: 300px;
-  height: 150px;
+  height: 173px;
   object-fit: contain;
   margin-right: 20px;
 }
@@ -128,6 +128,7 @@ textarea {
   }
   .ql-editor{
     height: 18vh !important;
+    background-color: azure;
   }
 }
   @media screen and (max-width: 768px) {
